--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mapbox-gl": "^2.13.0",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
