--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "serve-favicon": "^2.5.0"
@@ -49,6 +50,9 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1"
   }
